tests/stderr-snapshots/integration__integration__type_check__return__missing_from_void__stackless.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:25:1
   │
25 │ inline void foo() { }
   │ ^^^^^^^^^^^^^^^^^^^^^ not supported by ANM files


